# Basa

./: .gitignore  CLAUDE.md  README.md  adesk_audit.py  build.sh  deploy.sh  docker-compose.yml  manifest.json  script.js  widget.js
service/: .env.example  .gitignore  AMOCRM_SETUP.md  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
service/app/: main.py  scheduler_worker.py  worker.py
service/app/api/: deps.py
service/app/core/: config.py  crypto.py  security.py
service/app/db/: base.py  session.py
service/app/models/: __init__.py  _enums.py  amo_task.py  amo_webhook_log.py  analyst.py  payment.py  payment_audit.py  project.py  setting.py  user.py
service/app/schemas/: __init__.py  analyst.py  payment.py  project.py  user.py
service/app/services/: alerts.py  amo_client.py  amo_token_store.py  exports.py  metrics.py  queue.py  scheduler.py  sync.py  task_processor.py  webhook_processor.py
service/migrations/: env.py
service/migrations/versions/: 202605120001_initial_schema.py
service/scripts/: amo-check.sh  backup-db.sh  cron-backup.example  restore-db.sh  run-phase2.sh  simulate-amocrm.py
service/tests/: conftest.py  test_alerts.py  test_amo_mapping.py  test_amo_oauth.py  test_amo_users.py  test_bug_fixes.py  test_crypto.py  test_e2e_phase2.py  test_e2e_phase3.py  test_e2e_phase4.py  test_exports.py  test_metrics.py  test_scheduler.py  test_security.py  test_sync_helpers.py  test_task_processor.py  test_users.py  test_webhook_idempotency.py  test_webhook_processor.py
service/web/: app.js  index.html  styles.css
(+455 files in other folders)
