[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "basa-service"
version = "0.1.0"
description = "Сервис учёта работы аналитиков и выплат с интеграцией AmoCRM"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.34",
    "alembic==1.13.2",
    "psycopg[binary]==3.2.1",
    "pydantic[email]==2.9.0",
    "pydantic-settings==2.5.2",
    "email-validator==2.2.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "cryptography==43.0.1",
    "httpx==0.27.2",
    "redis==5.0.8",
    "rq==1.16.2",
    "python-multipart==0.0.9",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
